--- a/docker/db/Dockerfile
+++ b/docker/db/Dockerfile
@@ -4,4 +4,5 @@ ENV POSTGRES_PASSWORD docker
 ENV POSTGRES_DB db
 ENV POSTGRES_USER docker
 
-COPY . /app/database
+# Copy initialization script
+COPY docker/db/init.sql /docker-entrypoint-initdb.d/
